# slangchat

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml
data/: slang.json
docs/: decisions.md
scripts/: validate_data.py
slangchat/: __init__.py
slangchat/api/: __init__.py  app.py  models.py
slangchat/data/: __init__.py  loader.py  schema.py
slangchat/detection/: __init__.py  dictionary.py  hybrid.py  models.py  morphology.py  normalizer.py
tests/: test_api.py  test_data_validation.py  test_dictionary_detection.py  test_morphology_detection.py
