[project]
name = "slangchat"
version = "0.1.0"
description = "Hybrid multilingual slang detection and response recommendation engine"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

