[project]
name = "slangchat"
version = "0.1.0"
description = "Hybrid multilingual slang detection and response recommendation engine"
requires-python = ">=3.11"
dependencies = [
  "kiwipiepy>=0.20,<1",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[tool.setuptools.packages.find]
include = ["slangchat*"]
exclude = ["data*", "scripts*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
