[project]
name = "slangchat"
version = "0.1.0"
description = "Hybrid multilingual slang detection and response recommendation engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "kiwipiepy>=0.20,<1",
  "pydantic>=2.8,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
]

[tool.setuptools.packages.find]
include = ["slangchat*"]
exclude = ["data*", "scripts*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
